deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custumbuild-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: custumbuild
  template:
    metadata:
      labels:
        app: custumbuild
    spec:
      containers:
        - name: custumbuild_container
          image: chandanagirirajkumar/custumbuild:v6
          ports:
            - containerPort: 80
