nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: custombuildservice
spec:
  selector:
    app: custumbuild
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
