ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /sample1
        pathType: Prefix
        backend:
          service:
            name: sample1
            port:
              number: 80
      - path: /sample2
        pathType: Prefix
        backend:
          service:
            name: sample2
            port:
              number: 80
      - path: /sample3
        pathType: Prefix
        backend:
          service:
            name: sample3
            port:
              number: 80
